# ggoled

./: 11-steelseries-arctis-nova.rules  Cargo.toml  README.md  ggoled_app.service  shell.nix  shell.windows.nix
.github/workflows/: build.yml
flatpak/: .gitignore  build.sh  se.ramse.ggoled.desktop  se.ramse.ggoled.metainfo.xml  se.ramse.ggoled.yml
ggoled_app/: Cargo.toml  build.rs
ggoled_app/src/: main.rs  media.rs
ggoled_app/src/os/: linux.rs  macos.rs  mod.rs  windows.rs
ggoled_app/src/os/linux/: wayland.rs
ggoled_cli/: Cargo.toml
ggoled_cli/src/: main.rs
ggoled_draw/: Cargo.toml
ggoled_draw/fonts/: SOURCES.txt
ggoled_draw/src/: lib.rs
ggoled_lib/: Cargo.toml
ggoled_lib/src/: bitmap.rs  lib.rs
scripts/: clock.sh  scroll.sh  textpng.sh
src/: bitmap.rs  gg.rs  main.rs
