[package]
name = "ggoled"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.89"
bit-vec = "0.8.0"
clap = { version = "4.4.10", features = ["derive"] }
hidapi = "2.4.1"
image = { version = "0.24.7", features = ["gif"] }
rusttype = "0.9.3"
