[package]
name = "ggoled_app"
version = "0.1.0"
edition = "2021"

[dependencies]
tray-icon = "*"
image = { version = "*" }
windows-sys = { version = "*", features = ["Win32_System_SystemInformation", "Win32_System_Console"] }
ggoled_lib = { path = "../ggoled_lib" }
ggoled_draw = { path = "../ggoled_draw" }
chrono = "*"
windows = { version = "*", features = ["Media_Control", "Storage_Streams"] }
anyhow = "*"
serde = { version = "*", features = ["derive"] }
toml = "*"
directories = "*"
rfd = "*"

[build-dependencies]
winresource = "*"
